--- a/board_country_edit.html
+++ b/board_country_edit.html
@@ -54,6 +54,8 @@
               <a class='l-menu-active' href="board_country.html">國別管理</a>
               <a href="board_phrase.html">片語管理</a>
               <a href="board_template.html">詢價範本管理</a>
+              <a href="board_account.html">帳號管理</a>
+              <a href="board_organize.html">組織管理</a>
             </div>
 
             <span class="m-menu-t">一般業務</span>
