--- a/board_firm.html
+++ b/board_firm.html
@@ -53,6 +53,8 @@
               <a href="board_country.html">國別管理</a>
               <a href="board_phrase.html">片語管理</a>
               <a href="board_template.html">詢價範本管理</a>
+              <a href="board_account.html">帳號管理</a>
+              <a href="board_organize.html">組織管理</a>
             </div>
 
             <span class="m-menu-t">一般業務</span>
@@ -126,7 +128,7 @@
                 <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 02 -->
@@ -136,7 +138,7 @@
                 <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 03 -->
@@ -146,7 +148,7 @@
                 <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 04 -->
@@ -156,7 +158,7 @@
                 <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 05 -->
@@ -166,7 +168,7 @@
                 <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 06 -->
@@ -176,7 +178,7 @@
                 <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 07 -->
@@ -186,7 +188,7 @@
                 <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 08 -->
@@ -196,7 +198,7 @@
                 <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 09 -->
@@ -206,7 +208,7 @@
                 <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 10 -->
@@ -216,7 +218,7 @@
                 <p class='table-box20'>金屬</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_firm_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
             </div>
