--- a/board_firm_staff.html
+++ b/board_firm_staff.html
@@ -53,6 +53,8 @@
               <a href="board_country.html">國別管理</a>
               <a href="board_phrase.html">片語管理</a>
               <a href="board_template.html">詢價範本管理</a>
+              <a href="board_account.html">帳號管理</a>
+              <a href="board_organize.html">組織管理</a>
             </div>
 
             <span class="m-menu-t">一般業務</span>
@@ -145,7 +147,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='1'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_firm_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 02 -->
@@ -157,7 +159,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='2'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_firm_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 03 -->
@@ -169,7 +171,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='3'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_firm_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 04 -->
@@ -181,7 +183,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='4'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_firm_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 05 -->
@@ -193,7 +195,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='5'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_firm_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 06 -->
@@ -205,7 +207,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='6'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_firm_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 07 -->
@@ -217,7 +219,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='7'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_firm_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 08 -->
@@ -229,7 +231,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='8'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_firm_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 09 -->
@@ -241,7 +243,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='9'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_firm_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 10 -->
@@ -253,7 +255,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='10'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_firm_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
             </div>
