--- a/board_organize.html
+++ b/board_organize.html
@@ -38,7 +38,7 @@
         <div class='rTagBox'>
           <div class='tagBox'>
             <a class='tag' href="menu.html">內網首頁</a>
-            <a class='tag' href="board_template.html">詢價範本管理</a>
+            <a class='tag' href="board_organize.html">組織管理</a>
           </div>
         </div>
       </div>
@@ -52,21 +52,21 @@
               <a href="board_forget_pw.html">取回密碼</a>
               <a href="board_country.html">國別管理</a>
               <a href="board_phrase.html">片語管理</a>
-              <a class='l-menu-active' href="board_template.html">詢價範本管理</a>
+              <a href="board_template.html">詢價範本管理</a>
               <a href="board_account.html">帳號管理</a>
-              <a href="board_organize.html">組織管理</a>
+              <a class='l-menu-active' href="board_organize.html">組織管理</a>
             </div>
 
             <span class="m-menu-t">一般業務</span>
             <div class="m-smenu">
-              <a href="board_price_list.html">詢價列表</a>
-              <a href="board_sales_report.html">業務報表</a>
+              <a href="board_price_list.html" >詢價列表</a>
+              <a href="board_sales_report.html" >業務報表</a>
             </div>
 
             <span class="m-menu-t">資深業務</span>
             <div class="m-smenu">
-              <a href="board_price_list2.html">詢價列表</a>
-              <a href="board_sales_report2.html">業務報表</a>
+              <a href="board_price_list2.html" >詢價列表</a>
+              <a href="board_sales_report2.html" >業務報表</a>
             </div>
 
             <span class="m-menu-t">採購</span>
@@ -94,143 +94,92 @@
         <div class='block-r'>
           <div class='centBoxs'>
             <div class='boxsFull'>
-              <p class="t-blue-20 p-d-30">詢價範本管理</p>
-              <a class='btn-outline-blue icon-add order-r' href="board_template_edit.html">&nbsp;新增範本</a>
+              <p class="t-blue-20 p-d-30">組織管理</p>
+              <a class='btn-outline-blue icon-add order-r' href="board_organize_edit.html">&nbsp;新增組織</a>
             </div>
-
-            <div class='boxsFull m-d-25'>
-              <p class='t-r-15 text-l p-d-10'>所屬單位</p>
-              <div class="select-style">
-                <select>
-                  <option value="">請選擇</option>
-                  <option value="">所屬單位01</option>
-                  <option value="">所屬單位02</option>
-                  <option value="">所屬單位03</option>
-                </select>
-              </div>
-            </div>
-
-            <div class='boxsFull'>
-              <div class='boxs30'>
-                <p class='t-r-15 text-l p-d-10'>所屬業務</p>
-                <label>
-                  <input class='input-f' type="" name="" placeholder="請輸入">
-                </label>
-              </div>
-              <div class='boxs30'>
-                <p class='t-r-15 text-l p-d-10'>類別</p>
-                <div class="select-style">
-                  <select>
-                    <option value="">請選擇</option>
-                    <option value="">類別01</option>
-                    <option value="">類別02</option>
-                    <option value="">類別03</option>
-                  </select>
-                </div>
-              </div>
-              <div class='boxs30'>
-                <p class='t-r-15 text-l p-d-10'>關鍵字</p>
-                <label>
-                  <input class='input-f' type="" name="" placeholder="請輸入">
-                </label>
-              </div>
-
-              <div class='boxsFull m-td-25'>
-                <a class='btn-half-blue icon-search order-r' href="index.html">&nbsp;搜尋</a>
-              </div>
-            </div>
-
-            <!-- 按下搜尋後會出現的元件。開始 -->
-            <i class='splitLine_bl'></i>
-
-            <div class='boxsFull'>
-              <p class="t-black-20 p-d-30">搜尋結果</p>
-            </div>
-            <!-- 按下搜尋後會出現的元件。結束 -->
 
             <div class='boxsFull'>
               <div class='table-header'>
-                <p class='table-box20'>類&nbsp;別</p>
-                <p class='table-box60'>範本主題</p>
+                <p class='table-box80'>組織名稱</p>
                 <p class='table-box20'>操&nbsp;作</p>
               </div>
+              <!-- 01 -->
               <div class='table-body'>
-                <p class='table-box20'>類別01</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box80 text-l'>組織名稱文字</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create m-l-10' href="board_organize_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash-2 m-l-10 showModel' data-id='1'></button>
                 </p>
               </div>
+              <!-- 02 -->
               <div class='table-body'>
-                <p class='table-box20'>類別02</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box80 text-l'>組織名稱文字</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create m-l-10' href="board_organize_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash-2 m-l-10 showModel' data-id='2'></button>
                 </p>
               </div>
+              <!-- 03 -->
               <div class='table-body'>
-                <p class='table-box20'>類別03</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box80 text-l'>組織名稱文字</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create m-l-10' href="board_organize_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash-2 m-l-10 showModel' data-id='3'></button>
                 </p>
               </div>
+              <!-- 04 -->
               <div class='table-body'>
-                <p class='table-box20'>類別04</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box80 text-l'>組織名稱文字</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create m-l-10' href="board_organize_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash-2 m-l-10 showModel' data-id='4'></button>
                 </p>
               </div>
+              <!-- 05 -->
               <div class='table-body'>
-                <p class='table-box20'>類別05</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box80 text-l'>組織名稱文字</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create m-l-10' href="board_organize_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash-2 m-l-10 showModel' data-id='5'></button>
                 </p>
               </div>
+              <!-- 06 -->
               <div class='table-body'>
-                <p class='table-box20'>類別06</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box80 text-l'>組織名稱文字</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create m-l-10' href="board_organize_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash-2 m-l-10 showModel' data-id='6'></button>
                 </p>
               </div>
+              <!-- 07 -->
               <div class='table-body'>
-                <p class='table-box20'>類別07</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box80 text-l'>組織名稱文字</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create m-l-10' href="board_organize_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash-2 m-l-10 showModel' data-id='7'></button>
                 </p>
               </div>
+              <!-- 08 -->
               <div class='table-body'>
-                <p class='table-box20'>類別08</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box80 text-l'>組織名稱文字</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create m-l-10' href="board_organize_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash-2 m-l-10 showModel' data-id='8'></button>
                 </p>
               </div>
+              <!-- 09 -->
               <div class='table-body'>
-                <p class='table-box20'>類別09</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box80 text-l'>組織名稱文字</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create m-l-10' href="board_organize_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash-2 m-l-10 showModel' data-id='9'></button>
                 </p>
               </div>
+              <!-- 10 -->
               <div class='table-body'>
-                <p class='table-box20'>類別10</p>
-                <p class='table-box60 text-l'>範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字範本主題文字</p>
+                <p class='table-box80 text-l'>組織名稱文字</p>
                 <p class='table-box20'>
-                  <a class='iconLink linkGrey icon-create' href="board_template_edit2.html"></a>
+                  <a class='iconLink linkGrey icon-create m-l-10' href="board_organize_edit2.html"></a>
                   <button class='iconLink linkGrey icon-trash-2 m-l-10 showModel' data-id='10'></button>
                 </p>
               </div>
