--- a/board_product.html
+++ b/board_product.html
@@ -53,6 +53,8 @@
               <a href="board_country.html">國別管理</a>
               <a href="board_phrase.html">片語管理</a>
               <a href="board_template.html">詢價範本管理</a>
+              <a href="board_account.html">帳號管理</a>
+              <a href="board_organize.html">組織管理</a>
             </div>
 
             <span class="m-menu-t">一般業務</span>
@@ -156,7 +158,7 @@
                 </div>
                 <p class='table-box20 '>
                   <a class='iconLink linkGrey icon-create' href="board_product_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 02 -->
@@ -178,7 +180,7 @@
                 </div>
                 <p class='table-box20 '>
                   <a class='iconLink linkGrey icon-create' href="board_product_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 03 -->
@@ -200,7 +202,7 @@
                 </div>
                 <p class='table-box20 '>
                   <a class='iconLink linkGrey icon-create' href="board_product_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 04 -->
@@ -222,7 +224,7 @@
                 </div>
                 <p class='table-box20 '>
                   <a class='iconLink linkGrey icon-create' href="board_product_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 05 -->
@@ -244,7 +246,7 @@
                 </div>
                 <p class='table-box20 '>
                   <a class='iconLink linkGrey icon-create' href="board_product_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 06 -->
@@ -266,7 +268,7 @@
                 </div>
                 <p class='table-box20 '>
                   <a class='iconLink linkGrey icon-create' href="board_product_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 07 -->
@@ -288,7 +290,7 @@
                 </div>
                 <p class='table-box20 '>
                   <a class='iconLink linkGrey icon-create' href="board_product_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 08 -->
@@ -310,7 +312,7 @@
                 </div>
                 <p class='table-box20 '>
                   <a class='iconLink linkGrey icon-create' href="board_product_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 09 -->
@@ -332,7 +334,7 @@
                 </div>
                 <p class='table-box20 '>
                   <a class='iconLink linkGrey icon-create' href="board_product_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 10 -->
@@ -354,7 +356,7 @@
                 </div>
                 <p class='table-box20 '>
                   <a class='iconLink linkGrey icon-create' href="board_product_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
             </div>
