--- a/board_product_category.html
+++ b/board_product_category.html
@@ -53,6 +53,8 @@
               <a href="board_country.html">國別管理</a>
               <a href="board_phrase.html">片語管理</a>
               <a href="board_template.html">詢價範本管理</a>
+              <a href="board_account.html">帳號管理</a>
+              <a href="board_organize.html">組織管理</a>
             </div>
 
             <span class="m-menu-t">一般業務</span>
@@ -121,70 +123,70 @@
                 <p class='table-box80 text-l'>01產品類別產品類別產品類別產品類別產品類別產品類別</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_product_category_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <div class='table-body'>
                 <p class='table-box80 text-l'>02產品類別產品類別產品類別產品類別產品類別產品類別</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_product_category_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <div class='table-body'>
                 <p class='table-box80 text-l'>03產品類別產品類別產品類別產品類別產品類別產品類別</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_product_category_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <div class='table-body'>
                 <p class='table-box80 text-l'>04產品類別產品類別產品類別產品類別產品類別產品類別</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_product_category_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <div class='table-body'>
                 <p class='table-box80 text-l'>05產品類別產品類別產品類別產品類別產品類別產品類別</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_product_category_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <div class='table-body'>
                 <p class='table-box80 text-l'>06產品類別產品類別產品類別產品類別產品類別產品類別</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_product_category_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <div class='table-body'>
                 <p class='table-box80 text-l'>07產品類別產品類別產品類別產品類別產品類別產品類別</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_product_category_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <div class='table-body'>
                 <p class='table-box80 text-l'>08產品類別產品類別產品類別產品類別產品類別產品類別</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_product_category_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <div class='table-body'>
                 <p class='table-box80 text-l'>09產品類別產品類別產品類別產品類別產品類別產品類別</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_product_category_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <div class='table-body'>
                 <p class='table-box80 text-l'>10產品類別產品類別產品類別產品類別產品類別產品類別</p>
                 <p class='table-box20'>
                   <a class='iconLink linkGrey icon-create' href="board_product_category_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
             </div>
