--- a/board_staff.html
+++ b/board_staff.html
@@ -53,6 +53,8 @@
               <a href="board_country.html">國別管理</a>
               <a href="board_phrase.html">片語管理</a>
               <a href="board_template.html">詢價範本管理</a>
+              <a href="board_account.html">帳號管理</a>
+              <a href="board_organize.html">組織管理</a>
             </div>
 
             <span class="m-menu-t">一般業務</span>
@@ -147,7 +149,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='1'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 02 -->
@@ -160,7 +162,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='2'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 03 -->
@@ -173,7 +175,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='3'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 04 -->
@@ -186,7 +188,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='4'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 05 -->
@@ -199,7 +201,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='5'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 06 -->
@@ -212,7 +214,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='6'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 07 -->
@@ -225,7 +227,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='7'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 08 -->
@@ -238,7 +240,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='8'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 09 -->
@@ -251,7 +253,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='9'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
               <!-- 10 -->
@@ -264,7 +266,7 @@
                 <p class='table-box20'>
                   <div class='iconLink linkGrey icon-eye showModel' data-id='10'></div>
                   <a class='iconLink linkGrey icon-create m-l-10' href="board_staff_edit2.html"></a>
-                  <button class='iconLink linkGrey icon-trash m-l-10'></button>
+                  <button class='iconLink linkGrey icon-trash-2 m-l-10'></button>
                 </p>
               </div>
             </div>
