--- a/board_firm_staff_edit.html
+++ b/board_firm_staff_edit.html
@@ -99,7 +99,7 @@
             </div>
 
             <div class='boxsFull m-d-25'>
-              <div class='boxs30'>
+              <div class='boxs20'>
                 <p class='t-r-15 text-l p-d-10'>廠商公司名稱</p>
                 <div class="select-style">
                   <select>
@@ -110,39 +110,70 @@
                   </select>
                 </div>
               </div>
-              <div class='boxs30'>
-                <p class='t-r-15 text-l p-d-10'>廠商簡稱</p>
-                <label>
-                  <input class='input-f' type="" name="" placeholder="請輸入">
-                </label>
-              </div>
-              <div class='boxs30'>
-                <p class='t-r-15 text-l p-d-10'>採購人員姓名</p>
+              <div class='boxs20'>
+                <p class='t-r-15 text-l p-d-10'>聯絡人員</p>
                 <label>
                   <input class='input-f' type="" name="" placeholder="請輸入">
                 </label>
               </div>
             </div>
 
-            <div class='boxsFull m-d-25'>
-              <div class='box37_r re37_r'>
+            <div class='boxsFull m-td-25'> <!-- box -->
+              <div class="box20">
                 <p class='t-r-15 text-l p-d-10'>電子郵件</p>
-                <label>
-                  <input class='input-f' type="" name="" placeholder="請輸入">
-                </label>
+                <div class='boxsFull p-d-15'>
+                  <div class="box19_l">
+                    <label>
+                      <input class='input-f' type="" name="" placeholder="請輸入">
+                    </label>
+                  </div>
+                  <div class="box19_r order-c">
+                    <button class="icon-remove_circle btnAdd"></button>
+                  </div>
+                </div>
               </div>
-              <div class='box37_l re37_l'>
-                <p class='t-r-15 text-l p-d-10'>電話</p>
-                <label>
-                  <input class='input-f' type="" name="" placeholder="請輸入">
-                </label>
+              <div class="box20">
+                <p class='t-r-15 text-l p-d-10'>電子郵件備註</p>
+                <div class='boxsFull p-d-15'>
+                  <div class="box19_l">
+                    <label>
+                      <input class='input-f' type="" name="" placeholder="請輸入">
+                    </label>
+                  </div>
+                </div>
+              </div>
+            </div>  
+
+            <div class='boxsFull m-td-25'>
+              <!-- 虛線 -->
+              <i class="splitLine_bl"></i>
+
+              <div class="box20">
+                <p class='t-r-15 text-l p-d-10'>電子郵件</p>
+                <div class='boxsFull p-d-15'>
+                  <div class="box19_l">
+                    <label>
+                      <input class='input-f' type="" name="" placeholder="請輸入">
+                    </label>
+                  </div>
+                  <div class="box19_r order-c">
+                    <button class="icon-add_circle btnAdd"></button>
+                  </div>
+                </div>
+              </div>
+              <div class="box20">
+                <p class='t-r-15 text-l p-d-10'>電子郵件備註</p>
+                <div class='boxsFull p-d-15'>
+                  <div class="box19_l">
+                    <label>
+                      <input class='input-f' type="" name="" placeholder="請輸入">
+                    </label>
+                  </div>
+                </div>
               </div>
             </div>
 
-            <div class='boxsFull m-d-25'>
-              <p class='t-r-15 text-l p-d-10'>備註</p>
-              <textarea class='input-f' name="mytext" rows="6" cols="40" placeholder="請輸入" required></textarea>
-            </div>
+            
             
             <div class='boxsFull m-td-25'>
               <button class='btn-half-grey order-l'>清除重填</button>
